Post scrolling, last comment not showing fixed

--- a/css/style.css
+++ b/css/style.css
@@ -41,8 +41,21 @@ html {
 }
 
 .col-9 {
-    height: calc(100vh);
     overflow-y: scroll;
+    scrollbar-width: thin;
+    scrollbar-color: rgb(100, 100, 100) rgb(51, 51, 51) ;
+}
+
+.col-9::-webkit-scrollbar {
+    width: 8px;
+}
+
+.col-9::-webkit-scrollbar-thumb {
+    background-color: rgb(100, 100, 100);
+}
+
+.col-9::-webkit-scrollbar-track {
+    background-color: rgb(51, 51, 51);
 }
 
 html::-webkit-scrollbar {
@@ -129,4 +142,8 @@ a:hover {
 .card-header {
     padding : 5px;
     background : rgb(45, 51, 56);
+}
+
+.list-group-flush {
+    margin-bottom:5px;
 }
